--- a/TestTask.Tests/TestTask.Tests.csproj
+++ b/TestTask.Tests/TestTask.Tests.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TestTask\TestTask.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="sort\" />
+  </ItemGroup>
 </Project>
