--- a/TestTask/TestTask.csproj
+++ b/TestTask/TestTask.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <Folder Include="model\" />
     <Folder Include="condition\" />
+    <Folder Include="controller\" />
   </ItemGroup>
 </Project>
