--- a/TestTask/TestTask.csproj
+++ b/TestTask/TestTask.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <Folder Include="model\" />
-    <Folder Include="condition\" />
     <Folder Include="controller\" />
+    <Folder Include="ui\" />
   </ItemGroup>
 </Project>
